[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latpy"
version = "0.1.0"
description = "Lattice reduction algorithms with C++ backend"
authors = [
    {name = "satoshin", email = "you@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "numpy",
]
requires-python = ">=3.8"
