[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latpy"
version = "0.1.0"
description = "Lattice reduction algorithms with C++ backend"
authors = [
    {name = "Arata Sato", email = "25rc001d@rikkyo.ac.jp"}
]
license = {text = "LGPL-2.1-or-later OR MPL-2.0"}
dependencies = [
    "numpy",
]
requires-python = ">=3.8"
